--- a/index.html
+++ b/index.html
@@ -1,11 +1,19 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="vi">
   <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <title>Spotly</title>
+
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <meta name="keywords" content="Spotify Lyrics, Spotify Lyric, Spotly" />
+    <meta
+      name="description"
+      content="Xem lời bài hát ngay trên trình duyệt của bạn"
+    />
+    <meta name="author" content="FlyTri" />
   </head>
+
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
